<resources>
    <string name="app_name">TFT Stats</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gold">Gold</string>
    <string name="menu_health">Health</string>
    <string name="menu_placement">Placement</string>
    <string name="menu_level">Level</string>
    <string name="menu_item_stats">Item Stats</string>
    <string name="menu_final_comp_stats">Final Comp Stats</string>
    <string name="menu_death_stats">Death Stats</string>

    <string name="fragment_new_game">New Game</string>
    <string name="fragment_addchamp">Add champion</string>
    <string name="fragment_add_item">Add item</string>
    <string name="fragment_final_comp">Final Comp</string>
    <string name="fragment_game_edit">Edit Game</string>
    <string name="fragment_game_stats">Game Stats</string>

    <string-array name="placement_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="star_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="round_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <!-- Common -->
    <string name="name">Name</string>
    <string name="plus">+</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="armory">Armory</string>
    <string name="carousel">Carousel</string>
    <string name="pve">PVE</string>

    <!-- Add Champ -->
    <string name="star_level">Star level:</string>
    <string name="carry">Carry?</string>
    <string name="items">"Items: "</string>

    <!-- Add Item -->
    <string name="item_selected">Item selected: </string>
    <string name="item_selected_desc">Item selected</string>
    <string name="radiant_items">Radiant Items </string>

    <!-- Final Comp -->
    <string name="add_row">Add row</string>
    <string name="finish_game">Finish game</string>

    <!-- Stage -->
    <string name="stage_number">Stage %1$d</string>
    <string name="gold_colon">Gold:</string>
    <string name="health_colon">Health:</string>
    <string name="placement_colon">Placement:</string>
    <string name="level_colon">Level:</string>
    <string name="xp_colon">XP:</string>
    <string name="armory_colon">Armory:</string>
    <string name="carousel_colon">Carousel:</string>
    <string name="pve_colon">PVE:</string>
    <string name="died">Died?</string>
    <string name="round_died">Round died:</string>
    <string name="previous_stage">Previous Stage</string>
    <string name="next_stage">Next Stage</string>
    <string name="final_comp">Final Comp</string>

    <!-- Home -->
    <string name="last_10_games">Last 10 games</string>
    <string name="avg_placement">Avg placement: %1$s</string>
    <string name="avg_death">Avg death: stage %1$d-%2$d</string>
    <string name="delete_warning">Are you sure you want to permanently delete this game?</string>

    <!-- Game Edit -->
    <string name="changes_saved">Changes made are automatically saved.</string>

    <!-- Game Stats -->
    <string name="placement_game">Placement: %1$s</string>
    <string name="stage_item_table">Stage \\ Item</string>
    <string name="show_stat">"Show stat: "</string>

    <!-- Final Comp Stats -->
    <string name="avg_placement_by_trait">Average Placement by Trait</string>
    <string name="avg_placement_by_champ">Average Placement by Champion</string>
    <string name="best_final_traits">Best Final Traits</string>
    <string name="best_final_champs">Best Final Champions</string>
    <string name="avg_team_cost_per_placement">Average Team Cost Per Placement</string>

    <!-- Item Stats -->
    <string name="avg_placement_by_item">Average Placement by Item</string>
    <string name="best_items">Best Items</string>

    <!-- Death Stats -->
    <string name="death_stats_title">Placement per stage of death</string>
</resources>
