<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/prev_stage"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_stage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text_title_size"
                android:layout_alignParentTop="true" />

            <CheckBox
                android:id="@+id/died_check"
                android:layout_width="@dimen/text_width"
                android:layout_height="@dimen/text_height"
                android:layout_below="@+id/text_stage"
                android:layout_centerVertical="true"
                android:text="@string/died"
                android:textSize="@dimen/text_body_size" />

            <LinearLayout
                android:id="@+id/round_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/died_check"
                android:layout_below="@+id/text_stage"
                android:visibility="gone">

                <TextView
                    android:id="@+id/round_label"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:gravity="center_vertical"
                    android:text="@string/round_died"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/text_body_size" />

                <Spinner
                    android:id="@+id/round_spin"
                    android:layout_width="@dimen/spin_width"
                    android:layout_height="@dimen/text_height"
                    android:background="@android:color/transparent"
                    android:textAlignment="center" />
            </LinearLayout>

            <!--    ITEMS -->
            <LinearLayout
                android:id="@+id/armory_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/died_check"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/armory_label"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:text="@string/armory_colon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/text_body_size" />

                <Button
                    android:id="@+id/armory_button"
                    style="@style/plus_button" />

                <ImageView
                    android:id="@+id/armory_image"
                    style="@style/item_image"
                    android:layout_marginStart="5dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/clear_armory_button"
                    style="@style/clear_button"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/carousel_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/armory_layout"
                android:orientation="horizontal"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/carousel_label"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/carousel_colon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/text_body_size"
                    android:gravity="center_vertical" />

                <Button
                    android:id="@+id/carousel_button"
                    style="@style/plus_button" />

                <ImageView
                    android:id="@+id/carousel_image"
                    style="@style/item_image"
                    android:layout_marginStart="5dp"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pve_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/carousel_layout"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/pve_label"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:gravity="center_vertical"
                    android:text="@string/pve_colon"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="@dimen/text_body_size" />

                <TableLayout
                    android:id="@+id/pve_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical">
                    <TableRow>
                        <Button
                            android:id="@+id/pve_button"
                            style="@style/plus_button"
                            android:layout_marginTop="12dp"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/placement_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_height"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/placement_colon"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_body_size"
                android:layout_below="@id/pve_layout"
                android:layout_toStartOf="@id/placement_spin"/>

            <Spinner
                android:id="@+id/placement_spin"
                android:layout_width="@dimen/spin_width"
                android:layout_height="@dimen/text_height"
                android:background="@android:color/transparent"
                android:textAlignment="center"
                android:layout_alignEnd="@+id/xp_input"
                android:layout_below="@+id/pve_layout" />

            <TextView
                android:id="@+id/health_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_height"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/health_colon"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_body_size"
                android:layout_below="@+id/placement_label"
                android:layout_toStartOf="@+id/health_input"/>

            <EditText
                android:id="@+id/health_input"
                android:layout_width="@dimen/input_width"
                android:layout_height="@dimen/text_height"
                android:ems="10"
                android:textAlignment="center"
                android:inputType="number"
                android:layout_below="@+id/placement_spin"
                android:layout_alignEnd="@+id/xp_input"/>

            <TextView
                android:id="@+id/gold_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_height"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/gold_colon"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_body_size"
                android:layout_below="@+id/health_label"
                android:layout_toStartOf="@id/gold_input"/>

            <EditText
                android:id="@+id/gold_input"
                android:layout_width="@dimen/input_width"
                android:layout_height="@dimen/text_height"
                android:ems="10"
                android:textAlignment="center"
                android:inputType="number"
                android:layout_alignEnd="@+id/xp_input"
                android:layout_below="@+id/health_input" />

            <TextView
                android:id="@+id/level_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_height"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/level_colon"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_body_size"
                android:layout_below="@+id/gold_label" />

            <Spinner
                android:id="@+id/level_spin"
                android:layout_width="@dimen/spin_width"
                android:layout_height="@dimen/text_height"
                android:background="@android:color/transparent"
                android:textAlignment="center"
                android:layout_toEndOf="@+id/level_label"
                android:layout_below="@+id/gold_input" />

            <TextView
                android:id="@+id/xp_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_height"
                android:gravity="center_vertical"
                android:text="@string/xp_colon"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="@dimen/text_body_size"
                android:layout_toEndOf="@+id/level_spin"
                android:layout_below="@+id/gold_input" />

            <EditText
                android:id="@+id/xp_input"
                android:layout_width="@dimen/input_width"
                android:layout_height="@dimen/text_height"
                android:layout_marginEnd="@dimen/stage_margin"
                android:ems="10"
                android:textAlignment="center"
                android:inputType="number"
                android:layout_toEndOf="@+id/xp_label"
                android:layout_below="@+id/gold_input" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/prev_stage"
        style="@style/normal_button"
        android:text="@string/previous_stage"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/next_stage"
        style="@style/normal_button"
        android:text="@string/next_stage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/final_comp_btn"
        style="@style/normal_button"
        android:text="@string/final_comp"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>