<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/game_placement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/game_item_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:id="@+id/game_item_header"
            android:layout_marginBottom="5dp">

            <TextView
                android:text="Stage \\ Item"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:text="Armory"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:text="Carousel"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:text="PVE Items"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/stat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show stat:" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal|vertical">

            <RadioGroup
                android:id="@+id/stat_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/gold_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_gold"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/health_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_health" />

                    <RadioButton
                        android:id="@+id/level_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_level" />

                    <RadioButton
                        android:id="@+id/placement_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_placement" />
            </RadioGroup>
        </HorizontalScrollView>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/gold_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/health_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/level_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/placement_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</LinearLayout>